# rstviewer

./: README.rst  pyproject.toml
src/rstviewer/: rstviewer.py
src/rstviewer/static/: rstviewer.css
src/rstviewer/templates/: viewer.html
